src/webui/src/sass/_general-layout.scss
// GENERIC ELEMENT STYLES

* {
    box-sizing: border-box;
}
html {
    font-size: 62.5%;
}
body {
    font-size: 62.5%;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
    font-family: $full;
    background-color: hsl(0, 0, 100);
    line-height: 1.42857143;
    color: #333;
}
.debug {
    font-size: 2em;
}
input {
    font-family: $slim;
    border: none;
    border-bottom: 1px solid $black-25;
    background-color: transparent;
    padding: 0.3rem;
    height: 2.6rem;
    font-size: 1.2rem;
    font-weight: 400;
    text-overflow: ellipsis;
    width: inherit;
    &:focus {
        border-bottom: 1px solid Transparent;
        box-shadow: 0px 0.3rem 0px $blue-50;
        outline: none;
        transition: all 0.3s ease-in-out;
    }
    &::placeholder {
        font-family: $full;
        -webkit-text-fill-color: $black-50;
        letter-spacing: 0.1rem;
        word-spacing: 0.2rem;
        font-weight: 500;
    }
    &.white {
        color: white;
        border-bottom: 1px solid rgba(255, 255, 0, 0.5);
        &::placeholder {
            color: rgba(255, 255, 0, 1);
        }
        &:focus {
            border-bottom: 1px solid white;
            box-shadow: 0px 1px 0px white;
            outline: none;
            transition: all 0.3s ease-in-out;
        }
    }
}
textarea,
.wysiwygeditor {
    font-size: 1.4rem;
    font-family: $slim;
    line-height: 2rem;
    padding: 0 0.3rem;
    width: 100%;
    min-height: 2.6rem;
    max-height: 50rem;
    border: none;
    background-color: transparent;
    border-bottom: 1px solid $black-50;
    border-radius: 0;
    outline: none;
    box-shadow: none;
    resize: vertical;
    &::placeholder {
        font-family: $full;
        font-size: 1.3rem;
        letter-spacing: 0.1rem;
        word-spacing: 0.2rem;
        font-weight: 500;
        line-height: 2rem;
        color: $black-40;
    }
}

// Avoid horizontal overflow of pasted images
.wysiwygeditor img {
    max-width: -webkit-fill-available;
    max-width: -moz-available;
    max-width: fill-available;
    height: auto;
}

textarea {
    &:focus {
        border-bottom: 1px solid Transparent;
        box-shadow: 0px 0.3rem 0px $blue-50;
        outline: none;
        transition: all 0.3s ease-in-out;
    }
}

.linebreak {
    white-space: pre;
}

.wysiwygeditor {
    &:focus[contenteditable='true'] {
        @extend textarea:focus;
    }
}

input[type='range'] {
    -webkit-appearance: none;
    &::-webkit-slider-runnable-track {
        width: 300px;
        height: 5px;
        background: $blue-50;
        border: solid 1px $black;
        border-radius: 3px;
    }
    &::-webkit-slider-thumb {
        -webkit-appearance: none;
        border: solid 1px $black;
        height: 16px;
        width: 16px;
        border-radius: 50%;
        background: $blue-95;
        margin-top: -7px;
    }
    &:focus {
        outline: none;
        box-shadow: none;
    }
}

.inputerror {
    border-bottom: 3px solid $red-75 !important;
}
.error {
    color: $red !important;
}
.ok {
    color: $green !important;
}

.non-production-warning {
    position: fixed;
    bottom: calc(50vh - 28rem);
    width: 100%;
    font-size: 28rem;
    z-index: 10000;
    pointer-events: none;
    text-align: center;
    color: $red-15;
}

h4.faded-title {
    font-weight: 500;
    font-size: 1.25rem;
    padding-right: 2.6rem;
    margin: 0.2rem 0;
    white-space: pre;
    letter-spacing: -0.04rem;
    text-transform: uppercase;
    opacity: 0.5;
    font-family: $slim;
}
a,
.clickable {
    color: inherit;
    text-decoration: none;
    border-bottom: 1px dashed;
    border-color: $black-25;
    cursor: pointer;
}
a:hover,
.clickable:hover {
    color: inherit;
    text-decoration: none;
    border-bottom: 1px solid;
}
a.white,
.clickable.white,
a.white:hover,
.clickable.white:hover {
    border-color: $white-25;
}

button,
select,
.bttn {
    font-family: $full;
    font-size: 1.2rem;
    font-weight: 500;
    letter-spacing: 0.1rem;
    word-spacing: 0.2rem;
    text-transform: uppercase;
    padding: 0.25rem 0.75rem;
    padding-top: 0.4rem;
    color: $black-75;
    white-space: nowrap;
    border-radius: 0;
    &.white {
        color: $white-75;
    }
    &:focus {
        outline: none;
        box-shadow: 0 0.3rem 0 $blue-50;
        transition: all 0.3s;
    }
    &:hover:not([disabled]) {
        cursor: pointer;
    }
}
button,
.dropdown,
.bttn {
    height: 2.6rem;
    box-shadow: 0 0.3rem 0 $black-05;
    background-color: $white-75;
    transition: all 0.3s;
    &.ng-leave,
    &.ng-enter {
        transition: none;
    }
    &:hover:not([disabled]) {
        box-shadow: 0 0.3rem 0.3rem $black-25;
        background-color: $white;
    }
}
button.normal {
    background-color: $blue-05 !important;
    color: $black-75 !important;
    &:hover:not([disabled]) {
        background-color: $white !important;
    }
}
.tag {
    text-transform: uppercase;
    font-size: 1.2rem;
    color: $black-50;
    border: 1px solid $black-25;
    padding: 0.2rem;
    margin-left: 0.5rem;

    &.red {
        color: $red;
        border: 1px solid $red-75;
    }
}

select {
    border: none;
    box-shadow: none;
    background: transparent;
    height: 100%;
    width: 100%;
    outline: none;
    padding-right: 2.6rem;
    -moz-appearance: none;
    &:-moz-focusring {
        color: transparent;
        text-shadow: 0 0 0 #000;
    }
    -webkit-appearance: none;
    &:focus {
        border-color: inherit;
    }
}
/* ... */

